syntax = "proto3";

package heartbeat;
option go_package = "proto/heartbeat";

service Heartbeat {
    // Send a heartbeat to the load balancer
    rpc SendHeartbeat(HeartbeatRequest) returns (HeartbeatStatus) {}
}

message HeartbeatRequest {
    string worker_id = 1;
}

message HeartbeatStatus {
    bool success = 1;
    string worker_id = 2;
    string worker_address = 3;
    string worker_load = 4;
    string error_message = 5;
}
